# comparative-attack-prompts

./: LICENSE  README.md  cap_run.py  pyproject.toml  requirements.txt
cap/: system_prompts.py  user_prompts.py
