[tool.poetry]
name = "comparative-attack-prompts"
version = "0.1.0"
description = ""
authors = ["Dominic Kelly <domkelly1010@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.1.0"
pydantic = "^2.0.2"
instructor = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "0.21.1"
mypy = "1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
